kubernetes-nws/deployment-infrastructure.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poibee-infrastructure
  namespace: poibee
  labels:
    app: poibee-infrastructure
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poibee-infrastructure
  template:
    metadata:
      labels:
        app: poibee-infrastructure
    spec:
      containers:
        - image: ghcr.io/poibee/poibee-infrastructure:main
          imagePullPolicy: Always
          name: poibee-infrastructure
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: poibee-infrastructure
  namespace: poibee
  labels:
    app: poibee-infrastructure
spec:
  ports:
    - port: 80
  selector:
    app: poibee-infrastructure
