kubernetes-nws/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poibee-app
  namespace: poibee
  labels:
    app: poibee-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poibee-app
  template:
    metadata:
      labels:
        app: poibee-app
    spec:
      containers:
        - image: ghcr.io/poibee/poibee-app:main
          imagePullPolicy: Always
          name: poibee-app
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: poibee-app
  namespace: poibee
  labels:
    app: poibee-app
spec:
  ports:
    - port: 80
  selector:
    app: poibee-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poibee-ingress-app
  namespace: poibee
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - poibee.de
      secretName: tls-secret-poibee-prod
  rules:
    - host: poibee.de
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: poibee-app
                port:
                  number: 80
