kubernetes-nws/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poibee-ingress
  namespace: poibee
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - poibee.de
      secretName: tls-secret-poibee-prod
  rules:
    - host: poibee.de
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: poibee-infrastructure
                port:
                  number: 80
